issue found... was using ol instead of li, also etf-8 changed to utf-8

--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="etf-8">
+        <meta charset="utf-8">
         <title>Pasta</title>
     </head>
     <body>
@@ -17,8 +17,10 @@
                     <li>Clove of Garlic, minced</li>
                 </ul>
         <h3>Steps</h3>
-                <ol>Prepare a pot of boiling water.</ol> 
-                <ol>Salt to taste (this means salt until it tastes like your memory of seawater).</ol>
-                <ol>Place the noodles in the boiling water, stirring occasionally.</ol>
+                <ol>
+                    <li>Prepare a pot of boiling water.</li> 
+                    <li>Salt to taste (this means salt until it tastes like your memory of seawater).</li>
+                    <li>Place the noodles in the boiling water, stirring occasionally.</li>
+                </ol>
     </body>
 </html>
