pasta page build applied to pizza and curry

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <p><a href="./recipes/pasta.html">Pasta</a></p>
+        <ol>
+            <li><a href="./recipes/pasta.html"><em>Pasta</em></a></li>
+            <li><a href="./recipes/pizza.html"><em>Pizza</em></a></li>
+            <li><a href="./recipes/curry.html"><em>Beef Curry Rice</em></a></li>
+        </ol>
     </body>
 </html>
