--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -9,18 +9,22 @@
         <img src="../img/pasta.png" alt="Delicious Fettuccini Alredo">
             <p><strong>Description</strong></p>
                 <p>Fettuccini Alfredo is a classic italian dish combining the powerful flavor of Alfredo cheese with the firm starch of a Fettuccini noodle.</p>
-                <p> The following is my own personal take on it in all its basic necessity. It is a staple meal of mine, and I actually enjoyed it the night I wrote this piece.</p>
+                <p>The following is my own personal take on it in all its basic necessity. It is a staple meal of mine, and I actually enjoyed it the night I wrote this piece.</p>
         <h2>Ingredients</h2>
                 <ul>
                     <li>Package of Fettuccini noodles</li>
                     <li>Jar of Alredo Sauce</li>
-                    <li>Clove of Garlic, minced</li>
+                    <li>4 Cloves of Garlic, minced</li>
+                    <li>1/4 stick butter</li>
                 </ul>
         <h3>Steps</h3>
                 <ol>
                     <li>Prepare a pot of boiling water.</li> 
                     <li>Salt to taste (this means salt until it tastes like your memory of seawater).</li>
-                    <li>Place the noodles in the boiling water, stirring occasionally.</li>
+                    <li>Place the noodles in the boiling water, stirring occasionally. Follow instructions on the pasta package for when to drain.</li>
+                    <li>In a skillet, heat set to medium, cook butter and garlic for 2 minutes.</li>
+                    <li>Pour in jar of Alfredo sauce and mix.</li>
+                    <li>Toss Alfredo sauce with pasta.</li>
                 </ol>
     </body>
 </html>
