added pastadogs to the homepage! other small edits

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,7 +8,7 @@
         <h1>Pizza</h1>
         <img src="../img/pepperoni-pizza.jpg" alt="Delicious Pepperoni Pizza">
             <p><strong>Description</strong></p>
-                <p>Pizza is a favorite of turtles everywhere</p>
+                <p>Pizza is a favorite of turtles everywhere.</p>
                 <p>I was originally inspired to start making pizza by a group of turtles dressed as ninjas.</p>
         <h2>Ingredients</h2>
                 <ul>
