--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <img src="./img/pastadogs.gif">
         <ul>
             <li><a href="./recipes/pasta.html"><em>Pasta</em></a></li>
             <li><a href="./recipes/pizza.html"><em>Pizza</em></a></li>
